fix dark mode and light mode css

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: rgb(253, 249, 243);
+  color: #213547;
   margin: 0;
 }
 
